<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelfAssessmentActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            style="@style/purple"
            android:id="@+id/textHeading"
            android:text="@string/assessment_heading"/>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView"
            style="@style/purpleBG"
            android:text="@string/assessment_text"/>

    <RelativeLayout android:layout_width="wrap_content"
                  android:paddingLeft="20dp"
                  android:paddingRight="20dp"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:orientation="horizontal">

              <ImageView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/progress_bar_light"
                    android:layout_gravity="center_horizontal"
                />

                 <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textPercent"
                    android:layout_gravity="center_horizontal"
                    android:text="1%"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageView"/>
    </RelativeLayout>

    <Button
            android:layout_height="wrap_content"
            android:layout_width="220dp"
            android:text="@string/physical_subheading"
            android:id="@+id/buttonSubheadingPhysical"
            android:layout_gravity="center_horizontal"
            android:onClick="startSelfAssessmentPhysical"
            android:background="@drawable/purple_button"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            />

    <Button
            android:layout_height="wrap_content"
            android:layout_width="220dp"
            android:text="@string/intellectual_subheading"
            android:id="@+id/buttonSubheadingIntellectual"
            android:layout_gravity="center_horizontal"
            android:onClick="startSelfAssessmentPhysical"
            android:background="@drawable/purple_button"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            />

    <Button
            android:layout_height="wrap_content"
            android:layout_width="220dp"
            android:text="@string/social_subheading"
            android:id="@+id/buttonSubheadingSocial"
            android:layout_gravity="center_horizontal"
            android:onClick="startSelfAssessmentPhysical"
            android:background="@drawable/purple_button"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            />

    <Button
            android:layout_height="wrap_content"
            android:layout_width="220dp"
            android:text="@string/individual_subheading"
            android:id="@+id/buttonSubheadingIndividual"
            android:layout_gravity="center_horizontal"
            android:onClick="startSelfAssessmentPhysical"
            android:background="@drawable/purple_button"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            />

</LinearLayout>
