<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelfAssessmentActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textSubheadingPhysical"
            style="@style/purpleSubHeading"
            android:text="@string/physical_subheading"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textView"
            style="@style/purpleBG"
            android:text="@string/assessment_text_rate"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textPhysicalText"
            android:text="@string/physical_question_1"/>

    <nz.ac.waikato.isdb.ui.LikertScale
        android:id="@+id/likertPhysical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textPhysicalText2"
            android:text="@string/physical_question_2"/>

    <nz.ac.waikato.isdb.ui.LikertScale
            android:id="@+id/likertPhysical2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/textPhysicalText3"
            android:text="@string/physical_question_3"/>

    <nz.ac.waikato.isdb.ui.LikertScale
            android:id="@+id/likertPhysical3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal"/>

</LinearLayout>
