<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/MainMenu"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|italic"
            android:textSize="40sp"
            android:layout_marginTop="50dp"
            style="@style/purple"
            android:text="@string/welcome_welcome"
            android:id="@+id/welcome"/>
    <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            style="@style/purple"

            android:layout_marginTop="10dp"
            android:id="@+id/welcome_text"
            />
    <Button
        android:id="@+id/buttonSelfAssessment"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="startSelfAssessment"
        android:text="@string/title_activity_self_assessment"
        android:width="270dp"
        android:layout_width="220dp"
        android:background="@drawable/purple_button"
        android:textColor="@color/white"
            />

    <TextView
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            style="@style/purple"
            android:text="@string/welcome_text_part2"
            android:layout_marginTop="10dp"
            android:id="@+id/welcome_text_part2"
            />

    <Button
        android:id="@+id/buttonDoing"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:onClick="startDoing"
        android:text="@string/title_activity_doing"
        android:width="270dp"
        android:singleLine="false"
        android:layout_width="220dp"
        android:background="@drawable/purple_button"
        android:textColor="@color/white"

            />

    <!--<TextView
            android:layout_width="fill_parent"
            android:layout_height="176dp"
            android:layout_marginBottom="10dp"
            android:textSize="12dp"
            android:textColor="#454545"
            android:gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true"
            android:text="go to alternative intro" android:clickable="true"/>
            -->


    <!-- could be the about page in the future
    <Button
        android:id="@+id/buttonInformation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:onClick="startInformation"
        android:text="Information"
        android:width="270dp" />
        -->

</LinearLayout>

